# workflow-editor

./: .gitignore  README.md  esbuildscript.mjs  example.ipynb  mypy.ini  package-lock.json  package.json  pyproject.toml  test_definitions.json  test_definitions2.json  tsconfig.json
js/: backend.ts  backendSchema.ts  bugfixes.ts  constants.ts  customValidation.ts  editorSchema.ts  extendedLitegraph.d.ts  operator.ts  operatorDefinitionWrapper.ts  operatorDefinitions.ts  paramsEditor.ts  typedJsonEditorNode.ts  typeguards.ts  ui.ts  util.ts  validationSummary.ts  widget.css  widget.ts  workflowOutNode.ts  workflowSchema.ts  workflowTypes.ts
js/nodes/: arrayBuilderNode.ts  operator.ts  operatorNode.ts  workflowOutNode.ts
js/schema/: backendSchema.ts  operatorDefinitionWrapper.ts  workflowSchema.ts
js/ui/: paramsEditor.ts  paramsView.ts  ui.ts  widget.css  workflowImporter.ts
src/: example.ipynb
src/workflow_editor/: DatatypeDefinition.py  OperatorDefinition.py  WorkflowOperatorDefinition.py  __init__.py
types/: bootstrap.d.ts  index.d.ts  litegraph.d.ts
